# Bindery

./: .gitignore  README.md  candidates.md  research-findings.md
factory/: README.md  _cover_vector_fix.py  audit_smoke.py  build.py  build_picture_ipa.py  ipadapter_smoke.py  pyproject.toml
factory/books/: cat-loss.config.json  deep-blue-world-v2.config.json  deep-blue-world-v3.config.json  deep-blue-world-v4.config.json  deep-blue-world-v4.content.json  deep-blue-world-v5.config.json  deep-blue-world-v5.content.json  deep-blue-world-v6.config.json  deep-blue-world-v6.content.json  deep-blue-world.config.json  dog-loss-companion.config.json  dog-loss-kids.config.json  dog-loss.config.json  pet-loss.config.json  where-does-mango-go.config.json  wild-golden-world.config.json  wild-green-world.config.json  wild-little-world.config.json  wild-white-world.config.json
factory/comfyui/: workflow.ipadapter.template.json  workflow.template.json
factory/factory/: art.py  audit.py  browsepdf.py  checklist.py  comfy_runtime.py  concept_content.py  config.py  content.py  copy.py  cover.py  flux_art.py  interior.py  paste_console.py  picture_content.py  provenance.py  readability.py  repair.py  specs.py  standard_content.py  subject_fallback.py  templating.py
factory/templates/: checklist.md.j2
factory/tests/: conftest.py  test_art.py  test_audit.py  test_browsepdf.py  test_build.py  test_checklist.py  test_comfy_runtime.py  test_concept_art.py  test_concept_content.py  test_config.py  test_content.py  test_copy.py  test_corner_guard.py  test_count_guard.py  test_cover.py  (+12 more)
(+36 files in other folders)
